Cleanup with Java 16 (#394)
* Cleanup using Java 16

* use Stream.toList()